# c_cpp_course

./: .gitignore  README.md
c_lessons/: lr_value.md  post_prefix.md
c_lessons/l01_introduction/: README.md
c_lessons/l02_compilation/: README.md  main.c  main.i  main.s
c_lessons/l03_in_out/: README.md
c_lessons/l04_array/: README.md
c_lessons/l05_functions/: README.md
c_lessons/l06_cmake/: README.md
c_lessons/l07_struct/: README.md  a.out  game.c  list.c
cpp_examples/Forms/: Forms.cpp  Forms.hpp  main.cpp
cpp_examples/Rational/: Rational.cpp  Rational.hpp  main.cpp
cpp_lessons/: l11_cast_types.md  l13_templates_functions.md  l15_templates_inner_classes.md  l16_templates_instantation.md  l17_template_inheritance.md  l18_template_frendship.md  l19_smart_pointers.md  l3_static_const.md  l4_overloading.md  l5_inheritance.md  l6_inheritance_errors.md  l8_inheritance_multiple.md
cpp_lessons/patterns/: p01_factory_method.md  p02_abstract_factory.md  p04_singletone.md  (+13 more)
homeworks/: HomeWork_1.md  HomeWork_2.md  HomeWork_4.md  Homework_3.md  Lab_1.md
lesson_1/: README.md  hello_world.cpp_prep
lesson_2/: array  array.cpp  if.cpp  operations_bit.cpp  operations_increments.cpp  operations_logic.cpp  switch.cpp
lesson_3/: i_example.cpp  pointer.cpp
lesson_4/: functions_2_arrays.cpp  functions_4_bubleSort.cpp  functions_5_calculator.cpp  functions_6_manyParams.cpp
lesson_5/: memclasses_2_static.cpp
lesson_6/: calculator.hpp  main.cpp
lesson_8/: CMakeLists.txt
outdated/lesson_7/: CMakeLists.txt
outdated/lesson_7/calculator/: calculator.cpp
(+28 files in other folders)
